--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
-version: "3.2"
-services:
-  apache:
-    build: . 
-    ports:
-      - "8080:80"
-    volumes:
-      - ./public_html/:/usr/local/apache2/htdocs/ 
+web:
+  image: nginx
+  volumes:
+   - ./public_html:/usr/share/nginx/html/
+  ports:
+   - "8080:80"
+  environment:
+   - NGINX_HOST=foobar.com
+   - NGINX_PORT=80
