--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,12 @@
-web:
-  image: nginx
-  volumes:
-   - ./public_html:/usr/share/nginx/html/
-  ports:
-   - "8080:80"
-  environment:
-   - NGINX_HOST=foobar.com
-   - NGINX_PORT=80
+version: '3.2'
+services:
+  frontend:
+    build: .
+    image: <<username>>/IS218Project1
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
+
+  backend:
+    image: nginx
